--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://dokirlens:dokirlens@cluster0.lvcqa.mongodb.net/turistas?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://USERNAME:PASSWORD@cluster0.lvcqa.mongodb.net/YOURDB?retryWrites=true&w=majority
